Исправил меню и добавил вспл.окно на корзину

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 	<div class="container">
+		<!-- Mobile Toogle Menu -->
 		<ul id="toogle__menu">
 			<li><a href="#">Desktops </a></li>
 			<li><a href="#">Laptops & Notebooks </a></li>
@@ -40,27 +41,27 @@
 						</ul>
 					</nav>
 					<a href="#" id="shoppingCart__btn"><img src="img/shopping_cart_logo.png" alt="shopping cart" class="shoppingCart__logo"></a>
-				</div>
-				<div class="header__hover-block arrow-top">
-					YOU HAVE 0 ITEMS IN CART
+                    <div class="header__hover-block arrow-top">
+                        YOU HAVE 0 ITEMS IN CART
+                    </div>
 				</div>
 			</div>
 		</header>
 		<!-- Menu -->
 		<nav class="main__menu">
 			<div class="main__menu-inner wrapper">
-				<img src="img/Home_Icon.png" alt="Home icon" class="home__logo">
-				<ul>
+                <img src="img/Home_Icon.png" alt="Home icon" class="home__logo">
+				<ul id="menu">
 					<li><a href="#">Desktops </a></li>
 					<li><a href="#">Laptops & Notebooks </a>
-<!--						<ul id="sub__menu">-->
-<!--							<li><a href="#">Sony(2)</a></li>-->
-<!--							<li><a href="#">Android(4)</a></li>-->
-<!--							<li><a href="#">Apple(7)</a></li>-->
-<!--							<li><a href="#">Acer(53)</a></li>-->
-<!--							<li><a href="#">HP(78)</a></li>-->
-<!--							<li><a href="#">Intel(5)</a></li>-->
-<!--						</ul>-->
+						<ul id="sub__menu">
+							<li><a href="#">Sony(2)</a></li>
+							<li><a href="#">Android(4)</a></li>
+							<li><a href="#">Apple(7)</a></li>
+							<li><a href="#">Acer(53)</a></li>
+							<li><a href="#">HP(78)</a></li>
+							<li><a href="#">Intel(5)</a></li>
+						</ul>
 					</li>
 					<li><a href="#">Components</a></li>
 					<li><a href="#">Tablets</a></li>
